...
            android:layout_marginBottom="16dp"
            android:text="@string/order_number"
            android:textAlignment="textStart"
            app:ensureMinTouchTargetSize="true" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/orderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:scrollbarStyle="insideOverlay"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/creditAutoType"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_auto" />

            <com.google.android.material.chip.Chip
                android:id="@+id/creditManualType"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_manual" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cashType"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <com.google.android.material.chip.Chip
                android:id="@+id/grubhubType"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grubhub" />

            <com.google.android.material.chip.Chip
...

            <TextView
                android:id="@+id/tipStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/tip"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tip"
                android:layout_width="100dp"
...
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cashCheckedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cash_boolean"
                android:textSize="18sp" />

...
                android:layout_weight="0"
                android:text="@string/order_total"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/orderTotal"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:ems="8"
                android:hint="@string/zero_dot_zero_zero_text"
                android:importantForAutofill="no"
...
                android:layout_weight="0"
                android:text="@string/cash_received"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cashReceived"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:ems="8"
                android:hint="@string/zero_dot_zero_zero_text"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColorHint="#757575"
                android:textSize="18sp" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/OrderLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
...
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mountainHouseChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountain_house" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/save"
            android:textAlignment="center" />
...
