...
    <string name="zero_text">0</string>

    <string name="enter_order_number">Enter order number</string>
    <string name="summary">Summary</string>

    <string name="order_number">Order Number</string>
    <string name="credit_auto">Credit Auto</string>
    <string name="credit_manual">Credit Manual</string>
    <string name="cash">Cash</string>
    <string name="grubhub">Grubhub</string>
    <string name="levelup">LevelUp</string>
    <string name="other">Other</string>
    <string name="tip">Tip: $</string>
    <string name="cash_boolean">Cash?</string>
    <string name="order_total">Order Total: $</string>
    <string name="cash_received">Cash Received: $</string>
    <string name="tracy">Tracy</string>
    <string name="mountain_house">Mountain House</string>
    <string name="save">Save</string>

    <string name="tips">TIPS</string>
    <string name="tips_credit">Tips Credit:</string>
    <string name="tips_cash">Tips Cash:</string>
    <string name="tips_total">Tips Total:</string>
    <string name="reimbursement">REIMBURSEMENT</string>
...
