...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderNumberFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/orderNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_order_number"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
...
