...
    android:layout_height="match_parent"
    tools:context=".OrderList">

    <include layout="@layout/main_toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:tint="@color/white_50"
        app:srcCompat="@drawable/ic_baseline_add_24" />
...
